[package]
name = "board"
version = "0.1.0-unreleased"
authors = ["Conor Patrick <conor@solokeys.com>", "Hank Lee <kehan.lee@atlancube.com>", "Jisheng Chiu<jisheng.chiu@atlancube.com>"]
edition = "2021"

[dependencies]
admin-app = { path = "../../../admin-app" }
delog = "0.1"
fm11nc08 = {path = "../../../components/fm11nc08"}
lpc55-hal = { version = "0.3.0", features = ["littlefs", "rtic-peripherals"] }
lpc55-rtic = "0.5.7"
micromath = "2"
nb = "1"
trussed = { path = "../../../trussed" }
# trussed = { git = "https://github.com/trussed-dev/trussed", rev = "269e71ab7154ee766a146473d35329b7258e22b0" }
ref-swap = "0.1.2"

[features]
lpcxpresso55 = []
okdoe1 = ["lpcxpresso55"]
atlkey = []

no-buttons = []
no-clock-controller = []
enable-clock-controller-signal-pin = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[profile.release]
codegen-units = 1
# lto = true
# opt-level = "s"
incremental = false
debug = true

